--- a/server/nbproject/private/private.properties
+++ b/server/nbproject/private/private.properties
@@ -1,4 +1,6 @@
-auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
-# No need to modify this property unless customizing JavaFX Ant task infrastructure
-endorsed.javafx.ant.classpath=.
-user.properties.file=C:\\Users\\Mohamed Ibrahim\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
+compile.on.save=true
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
+user.properties.file=C:\\Users\\Mostafa\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
