--- a/server/nbproject/project.properties
+++ b/server/nbproject/project.properties
@@ -29,17 +29,22 @@ dist.jar=${dist.dir}/serverproject.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.gson-2.8.0-javadoc.jar=E:\\java projects\\usersapp\\serverconnection\\src\\serverconnection\\gson-2.8.0-javadoc.jar
-file.reference.gson-2.8.0-sources.jar=E:\\java projects\\usersapp\\serverconnection\\src\\serverconnection\\gson-2.8.0-sources.jar
-file.reference.gson-2.8.2.jar=E:\\java projects\\usersapp\\serverconnection\\src\\serverconnection\\gson-2.8.2.jar
-file.reference.postgresql-42.2.9.jar=src\\serverproject\\postgresql-42.2.9.jar
+file.reference.=E:\\
+file.reference.gson-2.8.0-javadoc.jar=C:\\Users\\Mostafa\\Documents\\gson-2.8.0-javadoc.jar
+file.reference.gson-2.8.0-sources.jar=C:\\Users\\Mostafa\\Documents\\gson-2.8.0-sources.jar
+file.reference.gson-2.8.0.jar=C:\\Users\\Mostafa\\Documents\\gson-2.8.0.jar
+file.reference.gson-2.8.2.jar=C:\\Users\\Mostafa\\Documents\\gson-2.8.2.jar
+file.reference.jackson-mapper-asl.jar=C:\\Users\\Mostafa\\Documents\\jackson-mapper-asl.jar
+file.reference.json-simple-1.1.jar=C:\\Users\\Mostafa\\Documents\\json-simple-1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-42.2.9.jar}:\
     ${file.reference.gson-2.8.0-javadoc.jar}:\
     ${file.reference.gson-2.8.0-sources.jar}:\
-    ${file.reference.gson-2.8.2.jar}
+    ${file.reference.gson-2.8.0.jar}:\
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.jackson-mapper-asl.jar}:\
+    ${file.reference.json-simple-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
